// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not accept NaN 1`] = `
[
  {
    "code": "is_nan",
    "path": [],
  },
]
`;

exports[`should not accept non-integers 1`] = `
[
  {
    "code": "invalid_integer",
    "path": [],
  },
]
`;

exports[`should not accept non-integers 2`] = `
[
  {
    "code": "invalid_integer",
    "path": [],
  },
]
`;

exports[`should not accept positive integers 1`] = `
[
  {
    "code": "too_large",
    "max": 0,
    "min": undefined,
    "path": [],
  },
]
`;

exports[`should not accept positive integers 2`] = `
[
  {
    "code": "too_large",
    "max": 0,
    "min": undefined,
    "path": [],
  },
]
`;

exports[`should not accept positive integers 3`] = `
[
  {
    "code": "too_large",
    "max": 0,
    "min": undefined,
    "path": [],
  },
]
`;
